# XSCAN

./: .gitignore  README.md  abd_go_features.json  abd_python_features.json  chrom_go_features.json  chrom_python_features.json  compare_features.py  dump_python_features.py
go_server/: pyproject.toml  requirements.txt
go_server/ember_cert/: __init__.py  download.py  features.py  model.py  pefile_warnings.txt
go_server/ember_nocert/: __init__.py  extract_v2_cli.py  features.py  features_nocert.py
web_ui/: README.md  index.html
web_ui/src/app/: i18n.ts  routes.tsx
web_ui/src/app/components/: Layout.tsx  ScanDetailModal.tsx
web_ui/src/app/context/: ScannerContext.tsx
xscan_client/: app.go  go.mod  go.sum  go_features.json  main.go  wails.json
xscan_client/cmd/featuredump/: main.go
xscan_client/frontend/: index.html  package-lock.json  package.json  package.json.md5  tailwind.config.cjs
xscan_client/frontend/src/: App.vue  i18n.ts  style.css
xscan_client/internal/ember/: authenticode_feat.go  byte_entropy.go  count_entropy.go  dims.go  dump_features.go  extract.go  extract_test.go  extras_feat.go  general.go  hasher.go  header_feat.go  histogram.go  import_parity_test.go  imports_exports_feat.go  pe_open.go  pe_parse.go  section_feat.go  section_props.go  sklearn_hasher.go  string_regexes.json  strings_feat.go
xscan_client/internal/lgbm/: align.go  engine.go  load_compat.go  pool.go
xscan_client/internal/pemeta/: signing.go
xscan_client/internal/store/: db.go  hash.go  models.go
xscan_client/scripts/: regex_dump.json
(+16 files in other folders)
