[project]
name = "go_server"
version = "2.0.0"
description = "XSCAN 纯净推理服务 (EMBER2024 + LightGBM + SHAP)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "lightgbm>=4.5.0",
    "pefile>=2024.8.26",
    "signify>=0.9.2",
    "numpy>=1.26",
    "scikit-learn>=1.5.1",
    "tqdm>=4.66.5",
    "huggingface_hub>=0.32.4",
    "shap>=0.45",
    "polars>=1.0",
    "lief==0.14.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
